--- a/gallery/sleep_journal/journal.html
+++ b/gallery/sleep_journal/journal.html
@@ -4,10 +4,10 @@
 <title>Gallery</title>
 </head>
 <body>
-    <h1>Gallery</h1>
+    <h1>Sleep journal</h1>
     <ul>
         <li>
-            <a href="/gallery/sunset.html">Sunset</a>
+            <a href="./ramps.html">Ramps</a>
         </li>
     </ul>
 </body>
